first page in css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Prateek Rajput</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Prateek Rajput</h1>
+        <p>MSc Data Science Student | NLP Specialist</p>
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/prateek-rajput-aa13436b/">LinkedIn</a> |
+            <a href="https://github.com/pkrajput">GitHub</a> |
+            <a href="https://scholar.google.com/citations?user=JIFPZRUAAAAJ&hl=en">Google Scholar</a>
+        </div>
+        <section>
+            <h2>About Me</h2>
+            <p>I'm an MSc Data Science student at Skolkovo Institute of Science and Technology, specializing in Natural Language Processing...</p>
+        </section>
+        <section>
+            <h2>Experience</h2>
+            <p>Research Engineer, Skoltech Huawei Project...</p>
+            <p>Data Analyst, Omni Net Technologies...</p>
+        </section>
+        <section>
+            <h2>Education</h2>
+            <p>MSc Data Science, Skolkovo Institute of Science and Technology...</p>
+            <p>B.Tech, Indian Institute of Technology Kanpur...</p>
+        </section>
+    </div>
+</body>
+</html>
