--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
     <div class="container">
         <h1>Prateek Rajput</h1>
-        <p>MSc Data Science Student | NLP Specialist</p>
+        <p>Email: prateek.rajput@skoltech.ru | Phone: +918930981911</p>
+        <p>MSc Data Science | NLP Specialist | LLMs and Agent Systems</p>
         <div class="social-links">
             <a href="https://www.linkedin.com/in/prateek-rajput-aa13436b/">LinkedIn</a> |
             <a href="https://github.com/pkrajput">GitHub</a> |
@@ -15,17 +16,55 @@
         </div>
         <section>
             <h2>About Me</h2>
-            <p>I'm an MSc Data Science student at Skolkovo Institute of Science and Technology, specializing in Natural Language Processing...</p>
+            <p>I'm a Data Scientist with specialization in NLP particularly on the KGQA task for multilingual databases on complex questions. Recently I have been working with agent systems using RAG with LLMs for Bio-Tech Analysis.</p>
         </section>
         <section>
             <h2>Experience</h2>
-            <p>Research Engineer, Skoltech Huawei Project...</p>
-            <p>Data Analyst, Omni Net Technologies...</p>
+            <p>Research Engineer, Skoltech Huawei Project | May 2022 - Aug 2023 | Moscow, Russia</p>
+            <p>Developed a novel and generic approach to answering complex questions for multilingual databases.</p>
+            <p>Achieved state of the art results on MINTAKA data set and published work in PACLIC 2023 conference being organised in Hong Kong.</p>
+            <p>Data Analyst, Omni Net Technologies | Jan 2019 - April 2021 | Lucknow, India</p>
+            <p>Worked in the Data Analysis team using unsupervised clustering algorithms for internet-based services and recommender systems.</p>
+            <p>Worked on database management systems for e-commerce websites, particularly on the task of link prediction.</p>
+            <p>Research Intern, Beijing Normal University | Oct 2017 - Aug 2018 | Beijing, China</p>
+            <p>Studied the variation of various primary and secondary geometric parameters in resulting morphology w.r.t hydro logical and IHA parameters, simulated the unsteady flow in Delft3D.</p>
+            <p>Used PCA and SVMs to create feature maps and study the correlation between discharge rates and delta morphology.</p>
+        </section>
+        <section>
+            <h2>Selected Projects</h2>
+            <p>Transparent Object Segmentation in ORB-SLAM3 Pipeline | March 2023 - July 2023</p>
+            <p>Trained a neural network on the Trans10K dataset for transparent object detection, integrated it into ORB-SLAM3, and evaluated performance using absolute trajectory and pose errors.</p>
+            <p>Image Restoration using Swin Transformer | Dec 2021 - March 2022</p>
+            <p>Replicated SwinIR for image restoration with Gaussian noise, evaluated using PSNR and SSIM. Compared performance on denoising and deblurring tasks and assessed metrics with ISTA and FISTA algorithms.</p>
+            <p>Comparing Architectures for Image Captioning on FLICK 8K | Mar 2021 - May 2021</p>
+            <p>Compared GRU and Transformer models using ResNet101, DenseNet121, and InceptionV3 backbones for image captioning. Evaluated training speed, inference time, and BLEU scores, finding DenseNet + Transformer as the best performer.</p>
+
+        </section>
+        <section>
+            <h2>Publications</h2>
+            <p>1. W. Gao, D. Shao, Z. B. Wang, W. Nardin, P. Rajput, W. Yang, T. Sun, and B. Cui. Long-term cumulative effects of intra-annual variability of unsteady river discharge on the progradation of delta lobes: A modeling perspective. Journal of Geophysical Research: Earth Surface, 124(4):960–973, 2019.</p>
+            <p>2. M. Salnikov, H. Le, P. Rajput, I. Nikishina, P. Braslavski, V. Malykh, and A. Panchenko. Large language models meet knowledge graphs to answer factoid questions. arXiv preprint arXiv:2310.02166, 2023.</p>
+        </section>
+        <section>
+            <h2>Coursework</h2>
+            <p>Deep Learning</p>
+            <p>Neural and Statistical NLP</p>
+            <p>Machine Learning</p>
+            <p>Time Series and Sequential Data</p>
+            <p>Recommender Systems</p>
+            <p>Introduction to Software Engineering</p>
+            <p>Computational Numerical Linear Algebra</p>
+            <p>Introduction to Data Science</p>
+
+        </section>
+        <section>
+            <h2>Skills</h2>
+            <p>Programming: Python, Bash, LaTeX | DBMS: MongoDB, SQL, MySQL | ML Tools: Pytorch, TensorFlow | Frameworks and Architectures: RAG for LLMs with Vector Databases, REACT Agent Systems, ViT, Transformers (Informer, Performer, T5), Pytorch Big Graph</p>
         </section>
         <section>
             <h2>Education</h2>
-            <p>MSc Data Science, Skolkovo Institute of Science and Technology...</p>
-            <p>B.Tech, Indian Institute of Technology Kanpur...</p>
+            <p>MSc Data Science, Skolkovo Institute of Science and Technology | Sep 2021 - Jul 2023</p>
+            <p>B.Tech, Indian Institute of Technology Kanpur | Jul 2013 - Jul 2017</p>
         </section>
     </div>
 </body>
