--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <section>
         <h2>About Me</h2>
-        <img src="prateek.jpg" alt="Prateek Rajput">
+        <img src="prateek.jpg" alt="Prateek Rajput" style="width: 192px; height: 192px;">
         <p>I'm a Data Scientist with specialization in NLP particularly on the KGQA task for multilingual databases on complex questions. Recently I have been working with agent systems using RAG with LLMs for Bio-Tech Analysis.</p>
     </section>
     <section>
