--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
     </div>
     <section>
         <h2>About Me</h2>
-        <img src="prateek.jpg" alt="Prateek Rajput" style="width: 192px; height: 192px;">
+        <img src="prateek.jpg" alt="Prateek Rajput" style="width: 250px; height: 192px;">
         <p>I'm a Data Scientist with specialization in NLP particularly on the KGQA task for multilingual databases on complex questions. Recently I have been working with agent systems using RAG with LLMs for Bio-Tech Analysis.</p>
     </section>
     <section>
         <h2>Experience</h2>
+        <p>Lead Data Scientist, Contraview | Aug 2023 - Current | Tel Aviv, Israel</p>
+        <ul style="font-size: smaller;">
+            <li>Developed a Bio-Tech anayst system using RAG tied with chatGPT and Google's PALM api.</li>
+            <li>Built vector databases for clinical trials, disease and drug catalogues, business competitors etc and tied them up with the LLM described above using baby-agi concept.</li>
+            <li>Built researcher ranking system and profiler to be used for sentiment analysis of a particular area for report generation after analysis.</li>
+        </ul>
         <p>Research Engineer, Skoltech Huawei Project | May 2022 - Aug 2023 | Moscow, Russia</p>
         <ul style="font-size: smaller;">
             <li>Developed a novel and generic approach to answering complex questions for multilingual databases.</li>
